<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen android:key="preference_screen"
     xmlns:android="http://schemas.android.com/apk/res/android"
      >


    <PreferenceCategory
        android:key="settings"
        android:title="@string/settings_label" 
        >
        <EditTextPreference
            android:defaultValue="@string/username_default"
            android:key="username"
            android:title="@string/username_label" />
        <EditTextPreference
            android:defaultValue="@string/password_default"
            android:key="password"
            android:title="@string/password_label"
            android:inputType="textPassword" />
         <CheckBoxPreference
            android:key="show_password"
            android:title="@string/show_password_label"
            android:defaultValue="@string/show_password_default" />

        <EditTextPreference
                android:defaultValue="@string/portnumber_default"
                android:key="portNum"
                android:title="@string/portnumber_label" />
        
        
    </PreferenceCategory>
    


</PreferenceScreen>